--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn --pretty index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/usamathpc/leetcode/issues"
   },
-  "homepage": "https://github.com/usamathpc/leetcode#readme"
+  "homepage": "https://github.com/usamathpc/leetcode#readme",
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
+  }
 }
